<resources>
    <string name="app_name">Xpensor</string>
    <string name="hint_phone">Enter Contact</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_retypepass">Retype Password</string>
    <string name="btn_sign_up">Register !!</string>
    <string name="err_msg_name">Please enter a Name</string>
    <string name="err_msg_required">Valid Input Required</string>
    <string name="err_msg_email">Please enter a Valid Email</string>
    <string name="err_msg_password">Enter a Password</string>
    <string name="err_msg_dob">Enter a valid D.O.B</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_signup">Don\'t have an account yet Register !!</string>
    <string name="btn_link_login">Already have an account Login !!</string>
    <string name="regi_btn">SIGN UP</string>
    <string-array name="status_1">
        <item>Credit</item>
        <item>Debit</item>
    </string-array>
</resources>
